# RemoteRender

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: base64.cpp  base64.h  client_main.cpp  data_channel_session.cpp  data_channel_session.h  ffmpeg_h264_decoder.cpp  ffmpeg_h264_decoder.h  ffmpeg_h264_file_source.cpp  ffmpeg_h264_file_source.h  ffmpeg_video_reader.cpp  ffmpeg_video_reader.h  input_command.cpp  input_command.h  qt_video_client_main.cpp  server_main.cpp  tcp_signaling_channel.cpp  tcp_signaling_channel.h  video_frame_protocol.cpp  video_frame_protocol.h  video_stream_server_main.cpp  webrtc_video_session.cpp  webrtc_video_session.h
tests/: data_channel_session_tests.cpp  input_command_tests.cpp  video_frame_protocol_tests.cpp  webrtc_video_session_tests.cpp
